# Raytrace

./: .gitignore  CMakeLists.txt  Doxyfile  IMPORTANT_LIGHTS.md  Makefile  README.md  main.cpp  model_compare.cpp  proj1.tar  raytracer2  test.txt  test_p1.rb
custom_drivers/: checker.mtl  dragon-texture.mtl  dragontri.mtl  driver-sphereboy.txt  driver-uniform.txt  driver00.txt  driver01-animate.animator  driver01-animate.txt  driver01.txt  driver02.txt  driver03.txt  rainbow_surface.mtl  sphereboy.mtl  temple.mtl  wall.mtl
include/: bonsai_tree.hpp  box.hpp  camera.hpp  color.hpp  drawable.hpp  driver.hpp  errors.hpp  face.hpp  file_utils.hpp  globals.hpp  image.hpp  light.hpp  mat4.hpp  material.hpp  model.hpp  ray.hpp  ray_intersection.hpp  ray_result.hpp  scene.hpp  sphere.hpp  timer.hpp  transformed_drawable.hpp  transformed_model.hpp  transforms.hpp  tri2.hpp  triangle.hpp  vec2.hpp  vec4.hpp  wavefront_material.hpp  wavefront_material_parser.hpp
src/: bonsai_tree.cpp  box.cpp  camera.cpp  drawable.cpp  driver.cpp  errors.cpp  face.cpp  file_utils.cpp  image.cpp  light.cpp  mat4.cpp  material.cpp  model.cpp  ray.cpp  ray_intersection.cpp  ray_result.cpp  scene.cpp  sphere.cpp  timer.cpp  transformed_drawable.cpp  transformed_model.cpp  transforms.cpp  triangle.cpp  vec2.cpp  vec4.cpp  wavefront_material.cpp  wavefront_material_parser.cpp
test/: main.cpp  test_box.cpp  test_camera.cpp  test_driver.cpp  test_image.cpp  test_mat4.cpp  test_material_parser.cpp  test_scene.cpp  test_sphere.cpp  test_transforms.cpp  test_triangle.cpp  test_vec4.cpp
utils/: animate.rb  driver-test.txt  driver03.txt  easycube.mtl  generate_driver_03.rb  generate_uniform_grid.rb  move_sphere.txt  spin_sube.animator  test.txt  tmp.txt
